[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/ameba.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/light.png" type="Texture" id=3]
[ext_resource path="res://src/Objects/ScreenShake.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 44.6754, 41.5894 )

[sub_resource type="CircleShape2D" id=1]
radius = 45.894

[sub_resource type="CircleShape2D" id=2]
radius = 46.3281

[sub_resource type="Animation" id=4]
resource_name = "Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/AttackArea/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.6, 0.6 )
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AttackArea" type="Area2D" parent="Sprite"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/AttackArea"]
position = Vector2( 62.7341, 0 )
shape = SubResource( 3 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.6, 0.6 )
limit_left = 0
limit_top = 0
limit_right = 1000
limit_bottom = 1000
smoothing_enabled = true

[node name="ScreenShake" parent="Camera2D" instance=ExtResource( 4 )]

[node name="Torch" type="Light2D" parent="."]
texture = ExtResource( 3 )
color = Color( 1, 0.690196, 0.458824, 1 )
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 2
shadow_filter_smooth = 50.0

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 4 )

[connection signal="body_entered" from="Sprite/AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="body_exited" from="EnemyDetector" to="." method="_on_EnemyDetector_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
